# Templete_project_with_test_framework

./: .gitmodules  CMakeLists.txt  README.md
src/: templete.c  templete.cpp
tests/: CMakeLists.txt
tests/src/: templete_test_code.c
tests/test_runners/: all_tests_runner.c  templete_test_runner.c
tests/unit_test_frameworks/: CMakeLists.txt
